<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/resultado"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resultado2"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/resultado1" />

    <Button
        android:id="@+id/resultado3"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        tools:layout_editor_absoluteY="360dp" />

    <Button
        android:id="@+id/resultado4"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        tools:layout_editor_absoluteY="470dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="#3A0303"
        android:text="VENEZUELA"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="#C62828"
        android:text="CHILE"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="#2E7D32"
        android:text="BOLIVIA"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="#FF8F00"
        android:text="ECUADOR"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#E6B8B8"
        android:text="PARAGUAY"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:background="#C60F0F"
        android:text="PERU"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="60dp"
        android:text="       VS"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resultado1"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#0277BD"
        android:text="ARGENTINA"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#D84315"
        android:text="BRASIL"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#1565C0"
        android:text="URUGUAY"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#EADE1E"
        android:text="COLOMBIA"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="100dp"
        android:text="    VS"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="90dp"
        android:text="   VS"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="90dp"
        android:text="   VS"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="68dp"
        android:layout_height="22dp"
        android:layout_marginTop="90dp"
        android:text="      VS"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/estadisticas"
        android:layout_width="256dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/Stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/titlePrin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/TitlePrin"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>